<resources>
    <string name="save">Save</string>
    <string name="facebook_app_id">1648722521825995</string>
    <string name="remove_frame">Remove frame</string>
    <string name="view_drag_helper">View Drag helper</string>
    <string name="done">Done</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="add_text">Add Text</string>
    <string name="edit">Edit</string>
    <string name="title_activity_home">Troll Maker</string>

    <string name="my_creations">My Creations</string>
    <string name="images">Images</string>
    <string name="created">Created</string>
    <string name="add_cell">Add Cell</string>
    <string name="search">Search</string>
    <string name="share_to_whats_app">Share to Whats App</string>
    <string name="share_to_facebook">Share to Facebook</string>
    <string name="created_using_troll_maker">Created Using Troll Maker</string>
    <string name="external_directory_permission_alert_msg">To save this created image, we need permission to access your external storage..!</string>
    <string name="on_back_press_alert_message">Are you sure you want to exit without saving this image ?</string>

    <string name="help">Help</string>
    <string name="delete_image_confirmation_msg">Are you sure you want to delete this image ?</string>
    <string name="save_confirmation_msg">Are you sure you want to save this frame ?</string>
    <string name="pick_from_gallery">Pick from Gallery</string>
    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"http://www.piclo.in\",\n  }\n}]</string>
    <string name="permission_denied_msg">We are unable to save the frame because you denied storage permission, please allow permission and try again.</string>
    <string name="share">Share</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>
