<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/transparent">

    <android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:orientation="vertical">


        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/CL_action_edit"
                style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/edit"
                android:src="@drawable/ic_create_black_24dp" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/CL_action_bring_to_front"
                style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/CL_action_edit"
                android:layout_toEndOf="@id/CL_action_edit"
                android:layout_toRightOf="@id/CL_action_edit"
                android:contentDescription="@string/view_drag_helper"
                android:src="@drawable/ic_bring_to_front" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/CL_action_remove_frame"
                style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/CL_action_edit"
                android:layout_toEndOf="@id/CL_action_bring_to_front"
                android:layout_toRightOf="@id/CL_action_bring_to_front"
                android:contentDescription="@string/remove_frame"
                android:src="@drawable/ic_cancel_black_24dp" />
        </android.support.v7.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/CL_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorMask"
            android:text="@string/title_activity_home"
            android:textColor="@android:color/white" />
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v7.widget.CardView>
