<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/cardview_default_radius"
    app:cardElevation="@dimen/cardview_default_elevation"
    app:cardUseCompatPadding="true">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/AIMC_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:cropToPadding="true">

        </android.support.v7.widget.AppCompatImageView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/AIMC_whatsAppShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_margin="@dimen/button_margin"
                android:background="@drawable/bg_button_common"
                android:contentDescription="@string/share_to_whats_app"
                android:src="@drawable/ic_whatsapp_24dp" />

            <ImageView
                android:id="@+id/AIMC_fbShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_margin"
                android:layout_toLeftOf="@id/AIMC_whatsAppShare"
                android:layout_toStartOf="@id/AIMC_whatsAppShare"
                android:background="@drawable/bg_button_common"
                android:contentDescription="@string/share_to_facebook"
                android:src="@drawable/ic_facebook_24dp" />

            <ImageView
                android:id="@+id/AIMC_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_margin"
                android:layout_toLeftOf="@id/AIMC_fbShare"
                android:layout_toStartOf="@id/AIMC_fbShare"
                android:background="@drawable/bg_button_common"
                android:contentDescription="@string/share"
                android:src="@drawable/ic_share_black_24dp"
                android:visibility="invisible"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/AIMC_action_remove_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_margin"
                android:layout_toLeftOf="@id/AIMC_share"
                android:layout_toStartOf="@id/AIMC_share"
                android:background="@drawable/bg_button_common"
                android:contentDescription="@string/remove_frame"
                android:src="@drawable/ic_delete_black_24dp" />

        </RelativeLayout>

    </android.support.v7.widget.LinearLayoutCompat>


</android.support.v7.widget.CardView>
