<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@drawable/cell_rectangle"
    app:contentPadding="@dimen/frame_padding">

    <ImageView
        android:id="@+id/AIF_action_add_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/frame_padding"
        android:adjustViewBounds="true"
        android:contentDescription="@string/title_activity_home"
        android:cropToPadding="true"
        android:scaleType="centerInside"
        android:src="@drawable/ic_add_a_photo_black_24dp" />

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/AIF_action_remove_frame"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:adjustViewBounds="true"
        android:background="@color/colorMask"
        android:contentDescription="@string/remove_frame"
        android:cropToPadding="true"
        android:src="@drawable/ic_cancel_white_24dp" />

    <RelativeLayout
        android:id="@+id/AIF_mask_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorMask">

        <ImageButton
            android:id="@+id/AIF_drag_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:contentDescription="@string/view_drag_helper"
            android:src="@drawable/ic_drag_white_24dp" />

        <ImageButton
            android:id="@+id/AIF_action_resize"
            style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/view_drag_helper"
            android:src="@drawable/ic_resize_white_24dp" />


        <ImageButton
            android:id="@+id/AIF_action_bring_to_front"
            style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/view_drag_helper"
            android:src="@drawable/ic_bring_to_front_white_24dp" />

    </RelativeLayout>
</android.support.v7.widget.CardView>